# rust-experiments

./: .gitignore  server.py
attempts/: borrow_boxed_ref.rs  enum_ref.rs  generic_traits_1.rs  generic_traits_2.rs  static_self_call.rs  try_borrows.rs  try_generic_alias.rs  try_trait_args  try_trait_args.rs
create_svg/: Cargo.toml  compile.sh  create_svg.rs  index.html
disks/: Cargo.toml
disks/src/: disks2d.rs  energy.rs  montecarlo.rs  vec2.rs
filter_action/: filter_action.py  filter_action.rs
lidar/: Cargo.toml
lidar/analid/: Cargo.toml
lidar/analid/src/: lib.rs
lidar/src/: lidar.rs
mandelbrot/: Cargo.toml  compile.sh  index.html  mandelbrot.rs
mcdca/: Cargo.toml
mcdca/src/: mcdca.rs
pdb_parsing/: ter.rs
polars/: Cargo.toml  try_polars.rs
polymer/: Cargo.toml  coordinates.rs  polymer.rs
polymer/src/: coordinates_soa.rs  coordinates_v.rs  polymer.rs  polymer_aos.rs  polymer_soa.rs  vec3.rs
py_library_examples/: requirements.txt
py_library_examples/pyshapes/: Cargo.toml  Readme.md  pyproject.toml
py_library_examples/pyshapes/examples/: demo.rs
py_library_examples/pyshapes/py_examples/: demo.py
py_library_examples/pyshapes/src/: lib.rs
py_library_examples/pyshapes/src/shapes/: mod.rs
py_library_examples/separated_approach/: Cargo.toml
py_library_examples/shapes/: Cargo.toml
py_library_examples/source/: pyvenv.cfg
simd-rust/: Cargo.toml
simd-rust/src/: try_simd.rs
simulations_base/: Cargo.toml
simulations_base/src/: energy.rs  lib.rs  system.rs  (+1 more)
trait_casting/: move_and_return_reference.rs  try_trait_dynamic_cast.rs
(+17 files in other folders)
