[package]
name = "lidar"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.80"
clap = { version = "3.1.18", features = ["derive"] }
flate2 = "1.0"
bioshell-statistics = { path = "../../bioshell4/bioshell-statistics/" }

#[lib]
#crate-type =["cdylib"]
#path = "lidar.rs"

[[bin]]
name = "lidar"
path = "src/lidar.rs"
