[package]
name = "shapes"
version = "0.1.0"
edition = "2021"

[lib]
name = "shapes"
crate-type = ["cdylib", "lib"]

[[example]]
name = "demo"
path = "examples/demo.rs"

[env]
PYO3_PYTHON="/usr/bin/python3.9"


[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
lazy_static = "1.4"
